Fix bug on SideMenu
Issue: Page labels overflows the menu width when menu is expanding

Fix: Set menu itemos overflow to hidden

--- a/client/src/components/SideMenu/SideMenu.scss
+++ b/client/src/components/SideMenu/SideMenu.scss
@@ -33,6 +33,7 @@
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     transition: 0.3s;
+    overflow: hidden;
     white-space: nowrap;
     cursor: pointer;
     &.active {
